# 2026_C_AV_FC

./: .cproject  .gitignore  .project  2026_C_AV_FC.ioc  CMakeLists.txt  README.md  stm32h743zitx.ioc
Application/: main.cpp  main.h
Application/Data/: data.cpp  data.hpp  fsm.hpp  gps_store.cpp  ring_buffer.hpp
Application/Data/Stores/: BatteriesStore.cpp  CamsRecordingStore.cpp  EventStore.cpp  FlightEventTimersStore.cpp  NavSensorsStore.cpp  NavigationDataStore.cpp  PropSensorsStore.cpp  SensStatusStore.cpp  UplinkCmdStore.cpp  ValvesStore.cpp  VehiculeOverviewStore.cpp
Application/FlightControl/: av_state.cpp  av_state.h  threshold.h
Application/Modules/: imu_modlue.hpp  module.hpp
Application/Tests/: CMakeLists.txt  test_av_state.cpp  test_data.cpp  test_gps.cpp  test_ring_buffer.cpp
Application/Tests/Manual/: gps_manual_test.cpp
Core/Inc/: main.h
Core/Src/: main.c
Drivers/: .gitignore  ubx_gps_interface.h
Drivers/BMP390/: bmp390.h
Drivers/InvIMU/: InvIMU.h  InvIMU.hpp
Drivers/InvIMU/Impl/: InvIMU.cpp  InvIMU_mock.cpp  InvIMU_mock.h
Drivers/InvIMU/Tests/Hardware/: imu_manual_test.cpp  imu_manual_test.h
Drivers/InvIMU/Tests/Mock/: CMakeLists.txt  InvIMU_test.cpp
Drivers/InvIMU/imu/: inv_imu_driver.c  inv_imu_driver_aux1.c  inv_imu_driver_aux1.h  inv_imu_edmp.c  inv_imu_selftest.c
Drivers/STM32HAL/: stm32hal.cpp  stm32hal.h
Drivers/STM32HAL/Interfaces/: mock_uart.cpp  mock_uart.hpp
Drivers/STM32HAL/Simulations/: stm32sim_def.hpp  stm32sim_gpio.cpp  stm32sim_gpio.hpp  stm32sim_spi.cpp  stm32sim_spi.hpp  stm32sim_ticks.cpp  stm32sim_ticks.hpp  stm32sim_uart.cpp  stm32sim_uart.hpp
Drivers/STM32HAL/Simulations/FreeRTOSConfig_host/: FreeRTOSConfig.h  cmsis_device_host.h  cmsis_os.h
Drivers/STM32HAL/Tests/: CMakeLists.txt  mock_uart_tests.cpp  stm32sim_gpio_tests.cpp  stm32sim_spi_tests.cpp  stm32sim_ticks_tests.cpp  stm32sim_uart_tests.cpp
Drivers/UBX_GPS/: ubx_gps_interface.cpp  ubx_gps_interface.h
Drivers/UBX_GPS/Impl/: ubx_gps_interface.cpp
Drivers/UBX_GPS/Tests/: CMakeLists.txt  test_gps.cpp  ubx_test_helpers.hpp
Drivers/UBX_GPS/Tests/Hardware/: gps_manual_test.cpp  gps_manual_test.h
